--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Android Review</string>
+    <string name="error_list_events">"Couldn't load the events: "</string>
 </resources>
